--- a/task_management_system/src/styles/global.css
+++ b/task_management_system/src/styles/global.css
@@ -2,65 +2,120 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: white;
   height: 100vh;
-  background-color: #f0f2f5;
 }
+.login-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-around;
+  padding: 30px;
+  height: 500px;
+  width: 100%;
+  max-width: 300px;
+  border: 1px solid #1a2a57;
+}
+.login-div1 {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 240px;
+  width: 100%;
+  max-width: 290px;
+  padding: 10px;
 
+  flex-direction: column;
+}
+.login-div1A {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  height: 30px;
+  width: 100%;
+  max-width: 280px;
+  padding: 10px;
+}
+.text1 {
+}
 .login-form {
   background-color: white;
-  padding: 2rem;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
   width: 100%;
-  max-width: 400px;
+  height: 160px;
+  max-width: 280px;
+  padding: 10px;
 }
-
-h2 {
-  text-align: center;
-  color: #333;
-  margin-bottom: 1.5rem;
+.login-div2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
+  width: 100%;
+  max-width: 290px;
+  padding: 10px;
 }
+.login-div2B {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
+  width: 100%;
+  max-width: 280px;
+  padding: 10px;
 
-.form-group {
-  margin-bottom: 1rem;
-}
-
-label {
-  display: block;
-  margin-bottom: 0.5rem;
-  color: #555;
+  flex-direction: row;
+  margin-top: 20px;
 }
 
 input {
+  height: 50px;
+  border-radius: 5px;
   width: 100%;
-  padding: 0.5rem;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  font-size: 1rem;
+  max-width: 280px;
+  padding-left: 10px;
 }
 
 input:focus {
   outline: none;
-  border-color: #4a90e2;
-  box-shadow: 0 0 0 2px rgba(74, 144, 226, 0.2);
+  border-color: #1a2a57;
+  box-shadow: 0 0 0 2px #ffa366;
 }
 
 .login-button {
   width: 100%;
+  max-width: 280px;
   padding: 0.75rem;
-  background-color: #4a90e2;
+  background-color: #1a2a57;
   color: white;
   border: none;
-  border-radius: 4px;
-  font-size: 1rem;
+  border-radius: 5px;
+  font-size: 22px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  height: 50px;
+  align-items: center;
+  justify-content: center;
 }
 
 .login-button:hover {
-  background-color: #3a7bc8;
+  background-color: white;
+  color: black;
+  border: 3px solid #1a2a57;
 }
 
 .login-button:active {
-  background-color: #2a6cb8;
+  background-color: #1a2a57;
+  color: white;
+}
+.text2 {
+  color: #1a2a57;
+  font-weight: 800;
+}
+.text2:hover {
+  color: #ffa366;
 }
