--- a/task_management_system/src/styles/global.css
+++ b/task_management_system/src/styles/global.css
@@ -269,27 +269,26 @@ input:focus {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: var(--tertiary-color);
+
   height: 100vh;
   width: 100%;
-  animation: fadeIn 0.5s ease-in;
+  animation: fadeIn 2s ease-in;
+
   flex-direction: column;
+  overflow: hidden;
 }
-.videoBusy {
-  width: 800px;
-  height: 50px;
-}
+
 @keyframes fadeIn {
   from {
-    opacity: 0;
+    opacity: 0.1;
   }
   to {
     opacity: 1;
   }
 }
 .title {
-  font-size: 50px;
-  color: var(--primary-color);
+  font-size: 60px;
+  color: var(--tertiary-color);
   font-weight: 800;
   text-align: center;
 }
@@ -300,8 +299,9 @@ input:focus {
 
 @keyframes colorChange {
   0% {
-    color: var(--primary-color);
+    color: var(--tertiary-color);
   }
+
   50% {
     color: var(--secondary-color);
   }
@@ -322,6 +322,7 @@ input:focus {
   background-color: var(--tertiary-color);
   height: 100vh;
   width: 100%;
+  animation: fadeIn 2s ease-in;
 }
 
 .header {
@@ -329,7 +330,7 @@ input:focus {
   background-color: #8e44ad;
 }
 
-.content {
+.content2 {
   grid-area: content;
   display: grid;
   grid-template-columns: 0.2fr 3fr;
